Game adding validation completed
