# project/routes/games.js
@@ -1,6 +1,8 @@
 var express = require("express");
 var router = express.Router();
 const games_utils = require("./utils/games_utils");
+const season_utils = require("./utils/season_utils");
+const teams_utils = require("./utils/teams_utils");
 const DButils = require("./utils/DButils");
 
 
@@ -26,33 +28,65 @@ router.get("/currentStageGames", async (req, res, next) => {
  */
 router.use(async function (req, res, next) {
   if (req.session && req.session.userid) {
+    console.log("Checking if the user is a league representive")
+
     try{
       const users = await DButils.execQuery("SELECT userid FROM LeagueRepsUsers")
       if (users.find((x) => x.userid === req.session.userid)) {
+        console.log("The user is a leagure representive")
         next();
       }
       else 
         res.status(401).send("Privilege Error: The following action is only permitted to league representives");
-    
+
+
   } catch (error) {
       next(error);}
     }
+  else
+    res.status(401).send("Privilege Error: The following action is only permitted to league representives Or you have not Logged in first")
 });
 
   router.post("/addGame", async (req, res, next) => {
     try {
 
-      // Check if the user is a leagure representive
-      const userid =  req.session.userid
       const game_date = req.body.game_date;
-      // TODO MAKE SURE THE GAME IS FUTURE IN ORDER TO ADD
       const game_time = req.body.game_time
       const home_team = req.body.home_team
       const home_team_id = req.body.home_team_id
       const away_team = req.body.away_team
       const away_team_id = req.body.away_team_id
       const stadium = req.body.stadium
+      
+      // If the user only gave the team names without the id
+      if (home_team_id == undefined || away_team_id == undefined){
+        let ids = await Promise.all([teams_utils.getTeamIdByName(home_team_id), teams_utils.getTeamIdByName(away_team_id)])
+        home_team_id = ids[0]
+        away_team_id = ids[1]
+      }
 
+      // Check if the game's date match the current season. If not send an error to the user
+      if (!await season_utils.checkDateMatchCurrentSeason(new Date(game_date))){
+        let error = new Error()
+        error.message = "	Bad game input. Please check the date or team"
+        error.status = 406
+        throw error;
+      }
+      // Check if the game's match the Superliga's teams. If not send an error to the user
+      const leagues_checks = await Promise.all([teams_utils.checkTeamLeagueByTeamId(home_team_id), teams_utils.checkTeamLeagueByTeamId(away_team_id)])
+      if (!leagues_checks[0] || !leagues_checks[1]){
+        let error = new Error()
+        error.message = "Bad game input. Please check the date or team"
+        error.status = 406
+        throw error;
+      }
+      // Check if the game's date already exists. If not send an error to the user
+      else if (await games_utils.checkIfMathcExists(`${game_date} ${game_time}`, home_team_id, away_team_id)){
+          let error = new Error()
+          error.message = "the teams already have a match in that date & time"
+          error.status = 405
+          throw error;
+      }
       await games_utils.addFutureGame(game_date,game_time,home_team,home_team_id,away_team,
         away_team_id,stadium)
 
